--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -26,19 +28,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+
     buildFeatures {
         compose true
     }
+
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.2'
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -48,19 +55,57 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
+    // compose
+    implementation platform('androidx.compose:compose-bom:2023.05.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // compose activity
+    implementation 'androidx.activity:activity-compose:1.7.1'
+
+    // compose coil
+    implementation "io.coil-kt:coil-compose:2.3.0"
+
+    // compose paging
+    implementation "androidx.paging:paging-compose:1.0.0-alpha19"
+
+    // compose viewmodel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+
+    // compose hilt navigation
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // core
+    implementation 'androidx.core:core-ktx:1.10.0'
+
+    // lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+
+    // paging
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+
+    // coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.0'
+
+    // room
+    implementation 'androidx.room:room-runtime:2.6.0-alpha01'
+    implementation 'androidx.room:room-ktx:2.6.0-alpha01'
+    implementation "androidx.room:room-paging:2.6.0-alpha01"
+    kapt 'androidx.room:room-compiler:2.6.0-alpha01'
+
+    // hilt
+    implementation 'com.google.dagger:hilt-android:2.46'
+    kapt 'com.google.dagger:hilt-compiler:2.46'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    // moshi converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    // okhttp3 logging interceptor
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.3"
 }
