--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,19 @@ dependencies {
 
     // moshi converter
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    // moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.14.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
+}
+
+allprojects {
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+        kotlinOptions {
+            freeCompilerArgs += [
+                    "-opt-in=androidx.paging.ExperimentalPagingApi",
+                    "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api"
+            ]
+        }
+    }
 }
